# VINTEPILA_GEN_HTML

./: .gitignore  Readme.md  main.kv  main.py  makefile  pyproject.toml  question.py
scripts/: gen_html.py  template.py
ui/: main.ui  main_ui.py  question.ui  question_ui.py
