[tool.poetry]
name = "vintepila-gen-html"
version = "0.1.0"
description = "Generate HTML with insering data using the template."
authors = ["Gregorio Honorato"]
readme = "README.md"
packages = [{include = "vintepila_gen_html"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.7.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
